--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,17 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./*"]
+      "@*": ["./*"]
     }
   }
 }
+
+
+
+// {
+//   "compilerOptions": {
+//     "paths": {
+//       "@*": ["./*"]
+//     }
+//   }
+// }
